--- a/requirements-crewai.txt
+++ b/requirements-crewai.txt
@@ -2,6 +2,7 @@
 # Install with: pip install -r requirements-crewai.txt
 
 crewai>=0.28.0
+litellm>=1.0.0
 langchain-ollama>=0.1.0
 langchain-openai>=0.0.5
 tiktoken>=0.5.0
