--- a/requirements-crewai.txt
+++ b/requirements-crewai.txt
@@ -4,5 +4,10 @@
 crewai>=0.28.0
 litellm>=1.0.0
 langchain-ollama>=0.1.0
-langchain-openai>=0.0.5
+langchain-openai>=0.1.0
 tiktoken>=0.5.0
+
+# LangChain Agent Dependencies
+langchain>=0.2.0
+langchain-community>=0.2.0
+duckduckgo-search>=5.0.0
