--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core Streamlit app
-streamlit==1.31.0
-plotly==5.18.0
-pandas==2.2.0
-numpy==1.26.3
-tiktoken==0.5.2
+streamlit>=1.31.0
+plotly>=5.18.0
+pandas>=2.0.0
+numpy>=1.24.0
+tiktoken>=0.5.0
 
 # CrewAI Multi-Agent Demo (Module 2)
 crewai>=0.28.0
